# QingshuiYanTou

./: .editorconfig  .env.example  .gitignore  CODE_REVIEW_2026-06-25.md  README.md  docker-compose.yml  sync.sh  sync_minishare_ann.sh
backend/: .env.example  =2.8  ClarificationCard.vue  DATA_ACCESS_REVIEW.md  Dockerfile  crontab.txt  pyproject.toml  remove_cloud_sync.sh  requirements.txt  users.yaml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/frontend_patch/: Home.vue.patch  Home_clarification.patch  README.md  types_chat.ts.patch  useChatSession.ts.patch
backend/migrations/: 001_add_summary_registry.sql
backend/scripts/: .daily_sync_progress  .gitignore  add_optical_stocks.py  backfill_missing_pdfs.py  backfill_relation_timestamps.py  backfill_tech_mvp.sh  build_alias_table.py  build_evidence_batch.py  build_evidence_concurrent.py  build_evidence_fast.py  build_tech_whitelist.py  check_optical.py  check_optical_daily.py  check_pdf_db_consistency.py  classify_irm_batch.py  clean_kg_noise.py  cleanup_announcement_evidence.py  cleanup_eval_runs.py  cleanup_old_announcements.py  download_missing_pdfs.py  evidence_extraction_worker.py  evidence_ingestion_pipeline.py  expand_sector_v1_2.py  fix_pdf_consistency.py  fix_pdf_paths.py  health_check.py  import_board_data.py  import_irm_csv.py  index_existing_storage.py  ingestion_worker.py  init_database.py  init_optical_kg.py  kg_cleanup_v2.py  kg_extract_single_stock.py  kg_extraction_pipeline.py  load_concepts_to_db.py  p1_repair_notice_kg_inputs.py  p2_irm_batch_kg.py  (+27 more)
(+479 files in other folders)
